<resources>
    <string name="app_name">Quiz</string>
    <string name="default_image_alt">…</string>
    <string name="developer_name" style="text-decoration:none">
        <a href="https://croquignolex-tikiton.dmsemergence.com/">
            By Croquignolex Tikiton
        </a>
    </string>

    <string name="welcome">Bienvenue</string>
    <string name="please_enter_your_name">Entrez voutre nom SVP</string>
    <string name="name_hint">Exemple: Alex</string>
    <string name="submit">Valider</string>
    <string name="next">Suivant</string>
    <string name="well_done">Bravo</string>
    <string name="play_again">Jouer à nouveau</string>
</resources>