<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="10sp"
        android:layout_above="@id/logo"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/default_image_alt"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/developer"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_name" />

</RelativeLayout>